implement wrapper for element lists