@@ -3,12 +3,11 @@ package com.saucelabs.advancedselenium.saucedemo.pages;
 import org.openqa.selenium.By;
 import org.openqa.selenium.TimeoutException;
 import org.openqa.selenium.WebDriver;
-import org.openqa.selenium.WebElement;
 import org.openqa.selenium.remote.RemoteWebDriver;
 import com.saucelabs.advancedselenium.saucedemo.data.Person;
 import com.saucelabs.advancedselenium.saucedemo.elements.Element;
+import com.saucelabs.advancedselenium.saucedemo.elements.ElementList;
 
-import java.util.List;
 import java.util.function.Function;
 
 public class InformationPage extends BasePage {
@@ -17,7 +16,7 @@ public class InformationPage extends BasePage {
     private final Element lastNameElement = new Element(driver, By.cssSelector("input[data-test='lastName']"));
     private final Element postalCodeElement = new Element(driver, By.cssSelector("input[data-test='postalCode']"));
     private final Element continueButton = new Element(driver, By.cssSelector("input[data-test='continue']"));
-    private final By errorElement = By.cssSelector("[data-test=error]");
+    private final ElementList errorElements = new ElementList(driver, By.cssSelector("[data-test=error]"));
 
     public InformationPage(RemoteWebDriver driver) {
         super(driver);
@@ -36,8 +35,7 @@ public class InformationPage extends BasePage {
         try {
             wait.until((Function<WebDriver, Object>) driver -> !URL.equals(driver.getCurrentUrl()));
         } catch (TimeoutException ex) {
-            List<WebElement> errors = driver.findElements(errorElement);
-            String additional = errors.isEmpty() ? "" : " found error: " + errors.get(0).getText();
+            String additional = errorElements.isEmpty() ? "" : " found error: " + errorElements.getFirst().getText();
             throw new PageValidationException("Information not submitted;" + additional);
         }
     }
